[train|mutiembedder] Use the multifile embedder dataset (Tested for solo file)

--- a/molDistill/analyze_results.ipynb
+++ b/molDistill/analyze_results.ipynb
@@ -51,6 +51,17 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "df.mean(axis=1).sort_values(ascending=False)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "models = df.mean(axis=1).sort_values(ascending=False)[:15].index.tolist()"
    ],
    "metadata": {
