--- a/molDistill/analyze_results.ipynb
+++ b/molDistill/analyze_results.ipynb
@@ -2,6 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "path = \"../../data/ZINC\"\n",
+    "files_npy = [f for f in os.listdir(path) if f.endswith(\".npy\")]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-08T14:31:08.126227867Z",
+     "start_time": "2024-08-08T14:31:08.123291601Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ThreeDInfomax.npy\n",
+      "GraphCL.npy\n",
+      "GROVER.npy\n",
+      "ChemGPT-4.7M.npy\n",
+      "ChemGPT-19M.npy\n",
+      "ChemBertMLM-10M.npy\n",
+      "ContextPred.npy\n",
+      "MolR_gcn.npy\n",
+      "MolBert.npy\n",
+      "ChemBertMTR-77M.npy\n",
+      "MoleOOD_OGB_GIN.npy\n",
+      "MolR_tag.npy\n",
+      "MoleOOD_OGB_SAGE.npy\n",
+      "GraphLog.npy\n",
+      "MoleOOD_OGB_GCN.npy\n",
+      "ChemBertMTR-10M.npy\n",
+      "InfoGraph.npy\n",
+      "GPT-GNN.npy\n",
+      "ChemGPT-1.2B.npy\n",
+      "AttributeMask.npy\n",
+      "MolR_gat.npy\n",
+      "DenoisingPretrainingPQCMv4.npy\n",
+      "ChemBertMTR-5M.npy\n",
+      "ChemBertMLM-5M.npy\n",
+      "ChemBertMLM-77M.npy\n",
+      "GraphMVP.npy\n",
+      "FRAD_QM9.npy\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "for f in files_npy:\n",
+    "    print(f)\n",
+    "    shape=np.load(os.path.join(path, f)).shape\n",
+    "    np.save(os.path.join(path, f.replace(\".npy\", \"_shape.npy\")), shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-08T14:31:44.543266176Z",
+     "start_time": "2024-08-08T14:31:09.617067741Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
