--- a/molDistill/notebooks/downs_results-cls.ipynb
+++ b/molDistill/notebooks/downs_results-cls.ipynb
@@ -28,6 +28,8 @@
     "\n",
     "from molDistill.utils.notebooks import *\n",
     "\n",
+    "STUDENT_MODEL = \"model_275.pth\"\n",
+    "\n",
     "MODELS_TO_EVAL = [\n",
     "    \"ChemBertMLM-10M\",\n",
     "    \"ChemBertMTR-77M\",\n",
@@ -40,10 +42,9 @@
     "    \"FRAD_QM9\",\n",
     "    \"MolR_gat\",\n",
     "    \"ThreeDInfomax\",\n",
-    "    \"custom:MOSES_512_10_lr1e-4_gine\"\n",
+    "    STUDENT_MODEL\n",
     "]\n",
-    "\n",
-    "DATASETS = df_metadata[df_metadata.task_type == \"cls\"].index.tolist()"
+    "DATASETS = df_metadata[df_metadata.task_type == \"cls\"].index.tolist()\n"
    ]
   },
   {
@@ -60,12 +61,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS)\n",
+    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[(STUDENT_MODEL,\"student\")],)\n",
     "\n",
     "df, order = aggregate_results_with_ci(df_base)\n",
-    "style,latex = style_df_ci(df, order)\n",
     "\n",
-    "style"
+    "df"
    ],
    "metadata": {
     "collapsed": false
@@ -76,7 +76,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "table_path = \"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/molecule_results_cls.tex\"\n",
+    "df = df.drop([(\" \",\"avg\"), (\" \",\"avg std\")], axis=1)\n",
+    "style,latex = style_df_ci(df, order)\n",
+    "\n",
+    "table_path = f\"/home/philippe/Distill/latex/Distillation-MI-ICLR/tables/molecules/molecule_results_cls.tex\"\n",
     "with open(table_path, \"w\") as f:\n",
     "    f.write(latex)"
    ],
@@ -98,11 +101,23 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS)\n",
+    "df_base= get_all_results(MODELS_TO_EVAL, \"downstream_results\", DATASETS, renames=[(STUDENT_MODEL,\"student\")],)\n",
     "df_base.reset_index(inplace=True, drop=True)\n",
+    "df_base = df_base[df_base.dataset.isin(\n",
+    "    df_base.groupby(\"dataset\").embedder.nunique().index[df_base.groupby(\"dataset\").embedder.nunique() == len(MODELS_TO_EVAL)])]\n",
     "\n",
     "step = df_base.embedder.value_counts().max()\n",
-    "df_base[\"id\"] = df_base.index%step\n",
+    "df_base[\"id\"] = df_base.index%step"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "\n",
     "df_base"
    ],
@@ -115,9 +130,38 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "ranked_df = get_ranked_df(df_base, order)\n",
+    "ranked_df = get_ranked_df(df_base)\n",
     "\n",
-    "ranked_df.columns = [\"embedder\"] + [df_metadata.loc[c, \"short_name\"] for c in ranked_df.columns[1:]]\n",
+    "ranked_df.columns = [\"embedder\"] + [df_metadata.loc[c, \"short_name\"] for c in ranked_df.columns[1:]]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "fig = plt.figure(figsize=(7, 5))\n",
+    "sns.heatmap(ranked_df.set_index(\"embedder\").loc[order[::-1]].transpose(), cmap=\"viridis_r\", annot=True, fmt=\".1f\", cbar=False)\n",
+    "# Rotate the tick labels for the x-axis\n",
+    "plt.xticks(rotation=65)\n",
+    "fig.suptitle(\"Rankings of Embedders on Molecule Classification Datasets\")\n",
+    "\n",
+    "plt.savefig(\"/home/philippe/Distill/latex/Distillation-MI-ICLR/figures/molecules/cls_rankings.png\", bbox_inches=\"tight\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "melted_ranked = ranked_df.melt(id_vars=\"embedder\", var_name=\"dataset\", value_name=\"meanrank\")\n",
     "order_datas =ranked_df.set_index(\"embedder\").transpose()[\"student\"].sort_values().index\n",
@@ -128,7 +172,7 @@
     "colors[-1] = sns.color_palette(\"husl\", len(MODELS_TO_EVAL))[-1]\n",
     "\n",
     "cmapping = {model.replace(\n",
-    "    \"custom:MOSES_512_10_lr1e-4_gine\", \"student\"\n",
+    "    STUDENT_MODEL, \"student\"\n",
     "): color for model, color in zip(MODELS_TO_EVAL, colors)}\n",
     "\n",
     "fig,ax = plt.subplots(figsize=(20,3))\n",
@@ -149,16 +193,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "style = get_ranked_df(df_base, order)\n",
-    "style[\"embedder\"] = style[\"embedder\"].str.replace(\"_\", \" \")\n",
+    "df_ranked = get_ranked_df(df_base)\n",
     "\n",
-    "style.set_index(\"embedder\", inplace=True)\n",
     "\n",
-    "style.columns= pd.MultiIndex.from_tuples([(\n",
-    "    df_metadata.loc[c, \"category\"], df_metadata.loc[c, \"short_name\"]) for c in style.columns])\n",
-    "style = style[sorted(style.columns, key=lambda x: x[0])]\n",
+    "style, latex = style_df_ranked(df_ranked, order)\n",
     "\n",
-    "style = style.style.highlight_min(axis=0, props='bfseries:')\n",
     "\n",
     "style\n"
    ],
@@ -170,15 +209,21 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "col_format = \"r|\"\n",
     "over_cols = None\n",
-    "for ov_col, col in style.columns:\n",
-    "    if over_cols != ov_col:\n",
-    "        col_format += \"|\"\n",
-    "        over_cols = ov_col\n",
+    "for col in style.columns:\n",
+    "    col_format += \"|\"\n",
     "    col_format += \"c\"\n",
-    "col_format += \"|\"\n",
     "\n",
     "\n",
     "latex = style.to_latex(\n",
